# Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  compile_flags.txt  imgui.ini  xmake.lua
Editor/: AssetRegistry.hzr  BasicInteraction.json  CMakeLists.txt  NodeEditor.json  dancing_vampire.hAnimation  dancing_vampire.hSkeleton  imgui.ini
Editor/assets/: AssetRegistry.etr  AssetRegistry.hzr
Editor/assets/buildin/models/: sphere.mtl
Editor/assets/materials/: DefaultMaterial.hmaterial  M_Default.EMaterial  M_Default.hmaterial  M_Unnamed.EMaterial  blue.hmaterial  disney_material.mtlx  gold.EMaterial  gold.hmaterial  humanskin.EMaterial  humanskin.hmaterial  humanskin.hmaterial.bak  material.mtlx  red.hmaterial  rustediron.EMaterial  rustediron.hmaterial  rustediron.hmaterial.bak  test.glsl
Editor/assets/materials/lib/: def.mtlx  impl.mtlx  impl_dynamic.mtlx  pbrdef.mtlx  pbrlib.mtlx  pbrlib_impl.mtlx
Editor/assets/meshes/: DefaultMaterial.hmaterial  TestScene.hsmesh
Editor/assets/meshes/boy/: Martelo 2.fbx
Editor/assets/meshes/cornell_box/: DefaultMaterial.hmaterial  blue.EMaterial  blue.hmaterial  cornell_box.ESMesh  cornell_box.hsmesh  green.EMaterial  green.hmaterial  light.EMaterial  light.hmaterial  red.EMaterial  red.hmaterial  white.EMaterial  white.hmaterial
Editor/assets/meshes/default/: basicCube.ESMesh  basicCube.hsmesh  cone.ESMesh  cone.hsmesh  cube.ESMesh  cube.hsmesh  cylinder.ESMesh  cylinder.hsmesh  monkey.ESMesh  monkey.hsmesh  plane.ESMesh  plane.hsmesh  quad.ESMesh  quad.hsmesh  sphere.ESMesh  sphere.hsmesh  torus.ESMesh  torus.hsmesh
Editor/assets/meshes/gun/: 08 - Default.EMaterial  08 - Default.hmaterial  Cerberus_LP.ESMesh  Cerberus_LP.hsmesh
Editor/assets/meshes/source/: DefaultMaterial.hmaterial  sphere.mtl
Editor/assets/meshes/vampire/: Vampire_MAT.EMaterial  Vampire_MAT.hmaterial  dancing_vampire.EAnimation  dancing_vampire.EAnimator  dancing_vampire.EMesh  dancing_vampire.ESkeleton  dancing_vampire.hAnimation  dancing_vampire.hAnimator  dancing_vampire.hSkeleton  dancing_vampire.hmesh
Editor/assets/scenes/: CSM.hscene  Cube.Scene  Example.Scene  Example2.Scene  PBR.Scene  PBR.hscene  Physics.Scene  basic.hscene  empty.EScene  meta.EScene  meta.hscene  test.Scene  test.Scene.bak  test.hscene  tettt  tettt.hscene
Editor/assets/shaders/: CSM.geom  EquirectangularToCubeMap.glsl  FlatColor.glsl  IrradianceConvolution.glsl  PBR.frag  PBR.glsl  PBR.vert  PBRAnim.frag  PBRAnim.vert  PBR_Anim.glsl  Prefilter.glsl  ShadowMap.frag  ShadowMap.glsl  ShadowMap.vert  Skybox.frag  Skybox.glsl  Skybox.vert  Test.frag  Test.glsl  Test.vert  Texture.glsl  material.frag  material.vert  skybox.frag  skybox.vert
Editor/src/: CMakeLists.txt  EditorApp.cpp  EditorLayer.cpp  EditorLayer.h  EditorLayer.hpp  cmake_install.cmake
Editor/src/Panels/: CMakeLists.txt  ContentBrowserPanel.cpp  ContentBrowserPanel.h  ContentBrowserPanel.hpp  DebugPanel.cpp  DebugPanel.h  MaterialEditPanel.cpp  MaterialEditPanel.h  MaterialGraphPanel.cpp  MaterialGraphPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneHierarchyPanel.hpp  cmake_install.cmake
Ethereal/: CMakeLists.txt
Ethereal/src/: CMakeLists.txt  Ethereal.h  Ethereal.hpp  pch.h  pch.hpp
Ethereal/src/Animation/: AnimSerializer.cpp  AnimSerializer.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  Joint.cpp  Joint.h  Skeleton.cpp  Skeleton.h
Ethereal/src/Asset/: Asset.h  AssetExtensions.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetRegistry.h  AssetSerializer.cpp  AssetSerializer.h  AssetTypes.h  MeshSerializer.cpp  MeshSerializer.h
Ethereal/src/Backend/: BufferDescriptor.cpp  BufferDescriptor.h  CMakeLists.txt  Driver.cpp  Driver.h  DriverApi.cpp  DriverApi.h  DriverBase.h  DriverEnum.h  UniformBuffer.cpp  UniformBuffer.h
Ethereal/src/Base/: AABB.h  Application.cpp  Application.h  Base.h  Buffer.h  CMakeLists.txt  EntryPoint.h  GlobalContext.cpp  GlobalContext.h  Input.h  KeyCodes.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Profiler.h  Ref.cpp  Ref.h  Singleton.h  TimeStamp.h  UUID.cpp  UUID.h  Utils.h  Window.cpp  Window.h
Ethereal/src/Core/: Application.cpp  Application.h  Buffer.h  CMakeLists.txt  GlobalContext.cpp  GlobalContext.h  Input.h  Layer.cpp  Layer.h  LayerStack.h  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  TimeStamp.h  UUID.cpp  Window.h
Ethereal/src/Event/: ApplicationEvent.h  Event.h  KeyEvent.h
Ethereal/src/ImGui/: Colors.h  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiUtils.cpp  ImGuiUtils.h  ImGuizmo.cpp  ImGuizmo.h
Ethereal/src/Platform/: CMakeLists.txt
Ethereal/src/Project/: Project.cpp  Project.h
Ethereal/src/Renderer/: Buffer.cpp  Buffer.h  Common.h  EditorCamera.cpp  EditorCamera.h  Environment.cpp  Environment.h  Framebuffer.cpp  Framebuffer.h  GameObject.cpp  GameObject.h  GraphicsContext.h  Material.cpp  Material.h  MaterialAsset.cpp  MaterialAsset.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  RenderCommand.h  RenderPass.cpp  RenderPass.h  RenderResource.cpp  RenderResource.h  RenderScene.cpp  RenderScene.h  RenderSystem.cpp  RenderSystem.h  RendererAPI.cpp  RendererAPI.h  SceneCamera.cpp  SceneCamera.h  Shader.cpp  Shader.h  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Ethereal/src/Resource/: CMakeLists.txt  ResourceImporter.cpp  ResourceImporter.h  ResourceLoader.cpp  ResourceLoader.h
Ethereal/src/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Ethereal/src/Utils/: AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  BitmaskEnum.h  CString.h  ConfigManager.cpp  ConfigManager.h  EngineEnum.h  EngineMarco.h  Facotry.h  FileSystem.cpp  FileSystem.h  Hash.cpp  Hash.h  IniParser.h  Macro.h  Math.cpp  Math.h  PlatformUtils.h  ShaderUtils.h  StringUtils.cpp  StringUtils.h  UUIDAllocator.h  XmlParser.cpp  XmlParser.h  YAMLSerializationHelpers.h  Yaml.h
(+648 files in other folders)
